@@ -1,7 +1,7 @@
 // qmidictlOptions.h
 //
 /****************************************************************************
-   Copyright (C) 2010-2014, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2010-2015, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -24,6 +24,10 @@
 
 #include <QSettings>
 #include <QStringList>
+
+// Some hard-coded default options....
+#define QMIDICTL_UDP_ADDR "225.0.0.37"
+#define QMIDICTL_UDP_PORT  21928
 
 
 //-------------------------------------------------------------------------
@@ -53,6 +57,7 @@ public:
 
 	// Network options...
 	QString sInterface;
+	QString sUdpAddr;
 	int     iUdpPort;
 
 	// MIDI options...
