@@ -3,7 +3,7 @@
  <author>rncbc aka Rui Nuno Capela</author>
  <comment>QmidiCtl - A MIDI remote controller via IP/UDP multicast.
 
-   Copyright (C) 2010, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2010-2015, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -27,7 +27,7 @@
     <x>0</x>
     <y>0</y>
     <width>320</width>
-    <height>180</height>
+    <height>203</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -42,6 +42,12 @@
     <layout class="QVBoxLayout">
      <item>
       <widget class="QGroupBox" name="NetworkGroupBox">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
        <property name="title">
         <string>Network</string>
        </property>
@@ -51,6 +57,12 @@
        <layout class="QGridLayout">
         <item row="0" column="0">
          <widget class="QLabel" name="InterfaceTextLabel">
+          <property name="font">
+           <font>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
           <property name="text">
            <string>&amp;Interface:</string>
           </property>
@@ -61,13 +73,54 @@
         </item>
         <item row="0" column="1">
          <widget class="QComboBox" name="InterfaceComboBox">
+          <property name="font">
+           <font>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
           <property name="editable">
            <bool>true</bool>
           </property>
          </widget>
         </item>
         <item row="1" column="0">
+         <widget class="QLabel" name="UdpAddrTextLabel">
+          <property name="font">
+           <font>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
+          <property name="text">
+           <string>&amp;UDP Address:</string>
+          </property>
+          <property name="buddy">
+           <cstring>UdpAddrComboBox</cstring>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1" colspan="2">
+         <widget class="QComboBox" name="UdpAddrComboBox">
+          <property name="font">
+           <font>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
+          <property name="editable">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
          <widget class="QLabel" name="UdpPortTextLabel">
+          <property name="font">
+           <font>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
           <property name="text">
            <string>UDP &amp;Port:</string>
           </property>
@@ -76,8 +129,14 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
+        <item row="2" column="1">
          <widget class="QSpinBox" name="UdpPortSpinBox">
+          <property name="font">
+           <font>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
           <property name="accelerated">
            <bool>true</bool>
           </property>
@@ -91,6 +150,12 @@
      </item>
      <item>
       <widget class="QGroupBox" name="MidiGroupBox">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
        <property name="title">
         <string>MIDI</string>
        </property>
@@ -100,6 +165,12 @@
        <layout class="QGridLayout">
         <item row="0" column="0">
          <widget class="QLabel" name="MmcDeviceTextLabel">
+          <property name="font">
+           <font>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
           <property name="text">
            <string>MMC &amp;Device:</string>
           </property>
@@ -110,6 +181,12 @@
         </item>
         <item row="0" column="1">
          <widget class="QSpinBox" name="MmcDeviceSpinBox">
+          <property name="font">
+           <font>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
           <property name="accelerated">
            <bool>true</bool>
           </property>
@@ -141,6 +218,7 @@
  <layoutdefault spacing="4" margin="8"/>
  <tabstops>
   <tabstop>InterfaceComboBox</tabstop>
+  <tabstop>UdpAddrComboBox</tabstop>
   <tabstop>UdpPortSpinBox</tabstop>
   <tabstop>MmcDeviceSpinBox</tabstop>
   <tabstop>DialogButtonBox</tabstop>
