@@ -1,7 +1,7 @@
 // qmidictlUdpDevice.h
 //
 /****************************************************************************
-   Copyright (C) 2010, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2010-2015, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -56,7 +56,7 @@ public:
 	~qmidictlUdpDevice();
 
 	// Device initialization method.
-	bool open(const QString& sInterface, int iUdpPort = 21928);
+	bool open(const QString& sInterface, const QString& sUdpAddr, int iUdpPort);
 
 	// Device termination method.
 	void close();
